--- a/hugo.yaml
+++ b/hugo.yaml
@@ -102,6 +102,28 @@ menus:
       weight: 40
 
 
+  footer:
+    - name: About Us
+      url: /
+      weight: 10
+
+    - name: Services
+      url: /
+      weight: 20
+    
+    - name: Projects
+      url: /
+      weight: 30
+
+    - name: Contact Us
+      url: /
+      weight: 40
+
+    - name: FAQ
+      url: /
+      weight: 50
+
+
 #######################
 ######### PARAMS
 #######################
@@ -110,7 +132,7 @@ params:
   header:
     cta:
       label: Contact Us
-      url: /
+      url: /#form
 
 build:
   buildStats:
